objects/ASI_TH_CRM_Outstanding_Invoice__c.object
<CustomObject>
    <description>ASI_TH_CRM_Outstanding_Invoice</description>
    <fields>
        <fullName>ASI_CRM_CN_Aging_Day__c</fullName>
        <formula>IF( TODAY() &gt; ASI_TH_CRM_Due_Date__c, TODAY()-ASI_TH_CRM_Due_Date__c, 0)</formula>
        <label>Aging Day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Outstanding Invoices</relationshipLabel>
        <relationshipName>Outstanding_Invoices3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Sold_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sold To</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Outstanding Invoices (Sold To)</relationshipLabel>
        <relationshipName>Outstanding_Invoices1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Aging_Day__c</fullName>
        <label>Aging Day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Outstanding Invoices</relationshipLabel>
        <relationshipName>Outstanding_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Invoice_Type__c</fullName>
        <label>Invoice Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_OI_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Outstanding Invoice External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Remark__c</fullName>
        <label>Remark</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Sold_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sold To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Outstanding Invoices (Sold To)</relationshipLabel>
        <relationshipName>Outstanding_Invoices1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Total__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Outstanding Invoice</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Invoice No.</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Outstanding Invoices</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_Outstanding_Invoice</fullName>
        <active>true</active>
        <label>ASI CRM CN Outstanding Invoice</label>
    </recordTypes>
    <recordTypes>
        <fullName>TH_CRM_Outstanding_Invoice</fullName>
        <active>true</active>
        <label>TH CRM Outstanding Invoice</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>